2010-02-01  Ethan A Merritt  <merritt@u.washington.edu>

	* term/canvas.trm: Fix typo in javascript output.
	Bug #2943778

2010-02-01  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/command.c (pause_command): Use the default message for Windows
	pause dialog.

2010-01-31  Tatsuro Matsuoka  <tmacchant3@yahoo.co.jp>

	* src/command.c (pause_command): Fixes for pause on Windows with wxt.

	* src/wxterminal/wxt_gui.cpp (wxt_waitforinput): Fix for Windows.

2010-01-29  Ethan A Merritt  <merritt@u.washington.edu>

	* src/scanner.c (scanner): There was no scanner rule covering a token
	starting with '.'. This caused ambiguity in the interpretation of '.E1'.
	Is it a strange representation of 0, or concatenation of a string
	variable E1?  Resolve this with a new rule that a number with an initial
	'.' must continue with a digit.
	Bugfix

2010-01-28  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/command.c (pause_command): Fix "pause mouse" for gnuplot.exe on
	Windows.

2010-01-27  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/version.c: gnuplot_patchlevel[] should be 0-rc1 not rc1.

2010-01-25  Ethan A Merritt  <merritt@u.washington.edu>

	* INSTALL: Add section explaining the libreadline problem on OSX.

2010-01-25  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/win/wgraph.c (drawgraph pattern_bitmaps): Synchronize fill
	patterns of the Windows terminal with other terminals.

2010-01-15  <ottxor@users.sourceforge.net>

	* configure.in src/Makefile.am demo/Makefile.am.in:
	"make check" needs help if we did ./configure --program-suffix=FOO
	In this case make a temporary symlink so that 'make check' can find
	gnuplot_x11.
	Bug #2926141

2010-01-12  <ottxor@users.sourceforge.net>

	* configure.in share/Makefile.am:  Do not install LaTeX support files
	if there is no latex on the system.  Add configuration option
	--without-latex
	Bug #2928310

2010-01-12  Ethan A Merritt  <merritt@u.washington.edu>

	* term/pdf.trm: Always start a new path with a moveto.
	Bug #2930705
